--- a/CIBELServiceSpring/src/main/resources/application.properties
+++ b/CIBELServiceSpring/src/main/resources/application.properties
@@ -4,4 +4,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
-#spring.jpa.show-sql: true
+logging.level.org.springframework.web=DEBUG
+management.endpoints.web.exposure.include=*
+management.endpoint.httptrace.enabled=true
+management.endpoints.web.exposure.include=httptrace
+
