Configurar la documentación de swagger

--- a/CIBELServiceSpring/src/main/resources/application.properties
+++ b/CIBELServiceSpring/src/main/resources/application.properties
@@ -8,4 +8,5 @@ logging.level.org.springframework.web=DEBUG
 management.endpoints.web.exposure.include=*
 management.endpoint.httptrace.enabled=true
 management.endpoints.web.exposure.include=httptrace
+openapi.expand.api.version=v1.1
 
